# parking_server

./: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs  goal.md  ocr.proto  run-docker.bat
py/: ocr_script.py  ocr_script2.py
src/: CHANGELOG.md  car.rs  db.rs  main.rs  message.rs  mqtt.rs  ocr.rs
